Rename functions_index.html, Added ojects.js objects_index.html

--- a/w3schools/functions_index.html
+++ b/w3schools/functions_index.html
@@ -29,18 +29,14 @@
       <h2>
         Regular function 'this' represents the object that calls the function
       </h2>
-      <button id="btn-reg-this" onclick="regFuncThis">
-        Click Regular Function this
-      </button>
+      <button id="btn-reg-this">Click Regular Function this</button>
       <p id="reg-this"></p>
     </div>
 
     <!--Arrow function 'this' represents the owner of the function-->
     <div>
       <h2>Arrow function 'this' represents the owner of the function</h2>
-      <button id="btn-arr-this" onclick="arrFuncThis">
-        Click Arrow Function this
-      </button>
+      <button id="btn-arr-this">Click Arrow Function this</button>
       <p id="arr-this"></p>
     </div>
 
@@ -79,7 +75,7 @@
         This example creates an object with 3 properties (firstName, lastName,
         fullName). The fullName property is a method:
       </p>
-      <p id="func-metd"></p>
+      <p id="func-meth"></p>
     </div>
 
     <!--Predefined JavaScript call() method-->
@@ -88,14 +84,14 @@
       <p>
         With call(), an object can use a method belonging to another object.
       </p>
-      <p id="call-metd"></p>
+      <p id="call-meth"></p>
     </div>
 
     <!--call() method with arguments-->
     <div>
       <h2>call() method with arguments:</h2>
       <p>call() method can accept arguments.</p>
-      <p id="cal-met-arg"></p>
+      <p id="call-meth-arg"></p>
     </div>
 
     <!--apply() method with array as arguments-->
@@ -105,7 +101,7 @@
         The apply() method is very handy if to use an array instead of an
         argument list.
       </p>
-      <p id="apl-met-ary"></p>
+      <p id="appl-meth-arry"></p>
     </div>
 
     <!--JavaScript Function bind()-->
