--- a/w3schools/object_index.html
+++ b/w3schools/object_index.html
@@ -10,7 +10,7 @@
     <title>JavaScript Objects</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="" />
+    <link rel="stylesheet" href="object_style.css" />
   </head>
   <body>
     <!--[if lt IE 7]>
@@ -21,7 +21,14 @@
     <![endif]-->
     <h1>JavaScript Objects</h1>
     <div id="objects">
-      <h2>Using an Object Literal</h2>
+      <h2>
+        Using an Object Literal
+        <p id="obj-lit"></p>
+      </h2>
+      <h2>
+        Object Constructor Function
+        <p id="obj-con-fun"></p>
+      </h2>
     </div>
 
     <script src="objects.js" async defer></script>
