--- a/web-api/index.html
+++ b/web-api/index.html
@@ -22,7 +22,7 @@
 
     <div>
       <h1>Load Text File</h1>
-      <p id="content"></p>
+      <div id="content"></div>
     </div>
 
     <script src="web-api.js" async defer></script>
