New features added

--- a/web-api/index.html
+++ b/web-api/index.html
@@ -20,9 +20,17 @@
       </p>
     <![endif]-->
 
-    <div>
-      <h1>Load Text File</h1>
-      <div id="content"></div>
+    <div id="container">
+      <h1>Fetch Html Content Text File</h1>
+      <div id="html-content"></div>
+      <div>
+        <h1>Fetch Plain Text File</h1>
+        <p id="plain-text"></p>
+      </div>
+      <div>
+        <h1>Geolocation API</h1>
+        <p id="geolocation"></p>
+      </div>
     </div>
 
     <script src="web-api.js" async defer></script>
