--- a/fetch-api/index.html
+++ b/fetch-api/index.html
@@ -27,12 +27,8 @@
         <h1>Fetch Plain Text File</h1>
         <p id="plain-text"></p>
       </div>
-      <div>
-        <h1>Geolocation API</h1>
-        <p id="geolocation"></p>
-      </div>
     </div>
 
-    <script src="web-api.js" async defer></script>
+    <script src="fetch-api.js" async defer></script>
   </body>
 </html>
