Added class feature

--- a/basic/functions/index.html
+++ b/basic/functions/index.html
@@ -135,6 +135,6 @@
       <p id="func-clos"></p>
     </div>
 
-    <script src="functions.js" async defer></script>
+    <script src="function.js" async defer></script>
   </body>
 </html>
